Text fixes. Enable dark mode

--- a/src/styles/dark.css
+++ b/src/styles/dark.css
@@ -1,4 +1,4 @@
-/* @media screen and (prefers-color-scheme: dark) {
+@media screen and (prefers-color-scheme: dark) {
   :root {
     --background-color: #212121;
     --foreground-color: #f2f2f2;
@@ -9,7 +9,8 @@
   }
   h1,
   h2,
-  p, img {
+  p,
+  img {
     opacity: 0.9;
   }
-} */
+}
