--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -65,6 +65,13 @@ footer {
   background-color: var(--highlight-bg);
 }
 
+footer a,
+h1,
+h2 {
+  line-height: 1em;
+  letter-spacing: -0.02srem;
+}
+
 footer a {
   position: relative;
   z-index: 1;
@@ -128,12 +135,6 @@ section > h1 a:hover {
   font-style: normal;
 }
 
-section > h1,
-footer a {
-  line-height: 1em;
-  letter-spacing: -0.1rem;
-}
-
 picture img {
   position: absolute;
   top: 0;
@@ -165,16 +166,16 @@ img.sect_art_img {
 
 h1,
 h2,
-p {
-  color: var(--foreground-color);
-}
-
-h1,
-h2,
 p,
 a,
 section.sect--highlight span {
   font-family: "PT Root UI", Helvetica, Arial, sans-serif;
+}
+
+h1,
+h2,
+p {
+  color: var(--foreground-color);
 }
 
 h1 {
